--- a/src/scss/_breakpoint.scss
+++ b/src/scss/_breakpoint.scss
@@ -1,13 +1,13 @@
-@use './variables' as *;
+@use "./variables" as *;
 
 @mixin mobile {
-    @media only screen and (max-width: $mobile-width){
+    @media only screen and (max-width: $mobile-width) {
         @content;
     }
 }
 
-@mixin tabet {
-    @media only screen and (max-width: $tablet-width){
+@mixin tablet {
+    @media only screen and (max-width: $tablet-width) {
         @content;
     }
 }
